# Object_Detection

./: .gitignore  pyproject.toml
detection_tools/data/: pascal_voc.py
detection_tools/ssd/: modules.py  utils.py
notebooks/: Dataset_Exploration.ipynb  SSD_Detection.ipynb  SSD_Pascal_VOC_Detection.ipynb  SSD_Pascal_Voc_Detection2.ipynb  exploration.ipynb
